
- SimpleSwap can now be set an engine. If none was set, the old
  cash-flow-based calculation is used.
