@@ -1,7 +1,7 @@
 /* -*- mode: c++; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- */
 
 /*
- Copyright (C) 2000, 2001, 2002, 2003 RiskMap srl
+ Copyright (C) 2000-2005 StatPro Italia srl
 
  This file is part of QuantLib, a free-software/open-source library
  for financial quantitative analysts and developers - http://quantlib.org/
@@ -34,21 +34,25 @@ namespace QuantLib {
     // path generation and pricing traits
 
     //! default Monte Carlo traits for single-variate models
-    template <class rng_traits = PseudoRandom>
+    template <class RNG = PseudoRandom>
     struct SingleVariate {
+        typedef RNG rng_traits;
         typedef Path path_type;
         typedef PathPricer<path_type> path_pricer_type;
-        typedef typename rng_traits::rsg_type rsg_type;
+        typedef typename RNG::rsg_type rsg_type;
         typedef PathGenerator<rsg_type> path_generator_type;
+        enum { allowsErrorEstimate = RNG::allowsErrorEstimate };
     };
 
     //! default Monte Carlo traits for multi-variate models
-    template <class rng_traits = PseudoRandom>
+    template <class RNG = PseudoRandom>
     struct MultiVariate {
+        typedef RNG rng_traits;
         typedef MultiPath path_type;
         typedef PathPricer<path_type> path_pricer_type;
-        typedef typename rng_traits::rsg_type rsg_type;
+        typedef typename RNG::rsg_type rsg_type;
         typedef MultiPathGenerator<rsg_type> path_generator_type;
+        enum { allowsErrorEstimate = RNG::allowsErrorEstimate };
     };
 
 }
