@@ -57,13 +57,15 @@ namespace QuantLib {
               reproducing known good results.
     */
     template<class RNG = PseudoRandom, class S = Statistics>
-    class MCDigitalEngine : public MCVanillaEngine<RNG,S> {
+    class MCDigitalEngine : public MCVanillaEngine<SingleVariate<RNG>,S> {
       public:
-        typedef typename MCVanillaEngine<RNG,S>::path_generator_type
+        typedef
+        typename MCVanillaEngine<SingleVariate<RNG>,S>::path_generator_type
             path_generator_type;
-        typedef typename MCVanillaEngine<RNG,S>::path_pricer_type
+        typedef
+        typename MCVanillaEngine<SingleVariate<RNG>,S>::path_pricer_type
             path_pricer_type;
-        typedef typename MCVanillaEngine<RNG,S>::stats_type
+        typedef typename MCVanillaEngine<SingleVariate<RNG>,S>::stats_type
             stats_type;
         // constructor
         MCDigitalEngine(Size timeSteps,
@@ -138,15 +140,15 @@ namespace QuantLib {
                                             Real requiredTolerance,
                                             Size maxSamples,
                                             BigNatural seed)
-    : MCVanillaEngine<RNG,S>(timeSteps,
-                             timeStepsPerYear,
-                             brownianBridge,
-                             antitheticVariate,
-                             controlVariate,
-                             requiredSamples,
-                             requiredTolerance,
-                             maxSamples,
-                             seed) {}
+    : MCVanillaEngine<SingleVariate<RNG>,S>(timeSteps,
+                                            timeStepsPerYear,
+                                            brownianBridge,
+                                            antitheticVariate,
+                                            controlVariate,
+                                            requiredSamples,
+                                            requiredTolerance,
+                                            maxSamples,
+                                            seed) {}
 
     template <class RNG, class S>
     inline
